# wwl

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  flake.nix  pyproject.toml
examples/: README.md  basic_usage.rs  categorical_propagation.rs  continuous_propagation.rs  debug_conversion.rs  debug_difference.rs  debug_igraph.rs  different_sizes.rs  direct_test.rs  graph_demo.rs  graph_kernel.rs  labeled_graphs.rs  minimal_test.rs  petgraph_validation.rs  simple_igraph_test.rs  simple_test.rs  test_continuous_features.rs  variable_size_graphs.rs  verify_results.rs
src/: lib.rs
