[project]
name = "wwl-rust"
version = "0.1.0"
description = "Rust bindings for WWL (Wasserstein Weisfeiler-Lehman Graph Kernels)"
requires-python = ">=3.8"
dependencies = [
    "wwl",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"